<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="300dp"
			  android:layout_height="wrap_content"
			  android:background="@color/dialog_box"
			  android:orientation="vertical">


	<TableRow
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="20dp">

		<TextView
			android:id="@+id/tv_capture"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@null"
			android:gravity="center"
			android:padding="10dp"
			android:text="@string/capture"
			android:textColor="@color/white"
			android:textSize="20sp"
			android:textStyle="bold"/>

		<TextView
			android:id="@+id/tv_gallery"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@null"
			android:gravity="center"
			android:padding="10dp"
			android:text="@string/gallery"
			android:textColor="@color/white"
			android:textSize="20sp"
			android:textStyle="bold"/>
	</TableRow>

	<TextView
		android:id="@+id/tv_cancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="20dp"
		android:background="@null"
		android:gravity="center"
		android:padding="10dp"
		android:text="@string/cancel"
		android:textColor="@color/blue"
		android:textSize="18sp"
		android:textStyle="bold"/>
</LinearLayout>