<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/dialog_box"
				android:orientation="vertical">

	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="65dp"
		android:fillViewport="true"
		android:gravity="center">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/iv_preview"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="5dp"
				android:scaleType="fitXY"/>
		</LinearLayout>
	</ScrollView>

	<TableRow
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp">

		<Button
			android:id="@+id/btn_retake"
			android:layout_width="0dp"
			android:layout_height="40dp"
			android:layout_marginBottom="5dp"
			android:layout_marginRight="5dp"
			android:layout_weight="1"
			android:background="@drawable/selector_button"
			android:text="@string/retake"
			android:textColor="@color/white"
			android:textSize="20sp"
			android:textStyle="bold"/>

		<Button
			android:id="@+id/btn_save"
			android:layout_width="0dp"
			android:layout_height="40dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="5dp"
			android:layout_weight="1"
			android:background="@drawable/selector_button"
			android:text="@string/save"
			android:textColor="@color/white"
			android:textSize="20sp"
			android:textStyle="bold"/>
	</TableRow>

	<TextView
		android:id="@+id/tv_okay"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:background="@null"
		android:gravity="center"
		android:text="@string/okay"
		android:textColor="@color/blue"
		android:visibility="gone"
		android:textSize="20sp"
		android:textStyle="bold"/>

</RelativeLayout>